<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="3">

    <!-- Barra laterale -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#232196F3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSidebarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="STATO"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Login"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Welcome"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_waiting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Waiting"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_ordering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Ordering"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_serving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Serving"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/item_attesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Processing"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_chatBot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="ChatBot"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_farewelling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C92196F3"
            android:padding="10dp"
            android:text="Farewelling"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Signup"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_interview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Interview"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_outofsight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Out Of Sight"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/item_gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Gone"
            android:typeface="monospace"/>

    </LinearLayout>

    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewDrink"
            android:layout_width="380dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="Logo"
            android:src="@drawable/pic7farewelling" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/exitToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/exit"
                android:clickable="false"
                android:onClick="ExitFarewelling"
                android:contentDescription="Toggle Email Visibility"
                android:paddingLeft="5dp"/>

            <ImageButton
                android:id="@+id/userToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/user"
                android:clickable="false"
                android:contentDescription="Toggle Email Visibility"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/textViewLoggedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Utente Loggato"
                android:padding="8dp"
                android:layout_toEndOf="@id/userToggle"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Robo-Drink pronto"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_below="@id/imageViewDrink"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ci auguriamo ti piaccia."
            android:textSize="14sp"
            android:textColor="#757575"
            android:layout_below="@id/textViewTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textStyle="italic"/>

        <!-- Aggiungiamo il nome del drink e la sua spiegazione -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewMessage"
            android:layout_margin="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textViewDrinkName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Mojito"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="normal" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/textViewDrinkDescription"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="Breve spiegazione del drink"
            android:textAlignment="center"
            android:textColor="#757575"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/buttonRetrieve"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDrinkDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_design_general"
            android:focusable="true"
            android:clickable="true"
            android:cursorVisible="true"
            android:onClick="onClickRitira"
            android:padding="8dp"
            android:text="Ritira"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
