...
            android:textAlignment="center"
            android:textColor="#757575"
            android:textSize="14sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/buttonWaitingRoom"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewOrderStatusMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_design_general"
            android:focusable="true"
            android:clickable="true"
            android:cursorVisible="true"
            android:onClick="onClickWait"
            android:padding="10dp"
            android:text="Sala d'Attesa"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
...
